docs: add solutions + perf/concurrency entrypoints across modules